<resources>
    <string name="app_name">Ringtonator</string>

    <string name="welcome_to">Welcome to</string>
    <string name="get_started">Let\'s get started</string>

    <string name="grant">Grant</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="browse">Browse</string>

    <string name="settings_title">Settings</string>
    <string name="reset_ringtones_title">Reset Contact Ringtones</string>
    <string name="reset_ringtones_summary">This will clear all custom ringtones for all your contacts</string>
    <string name="launch_tts_settings_title">Open Text to Speech Settings</string>
    <string name="volume_boost_title">Boost Ringtone Volume</string>
    <string name="multithread_title">Multithreaded Generation</string>
    <string name="multithread_summary">Can significantly speed up ringtone generation.\nDisable this if you have reliability issues.</string>

    <string name="contact_picker_title">Select Contacts</string>
    <string name="ringtone_builder_title">Ringtone Builder</string>
    <string name="confirmation_title">Summary</string>
    <string name="working_title">Creating your Ringtones</string>
    <string name="result_title">All Done</string>

    <string name="progress_title_getting_ready">Getting Ready</string>
    <string name="progress_title_generating">Generating</string>
    <string name="progress_status_getting_ready">Preparing to create your Ringtones</string>
    <string name="progress_status_generating">Creating your new ringtones</string>

    <string name="result_success_title">Success</string>
    <string name="result_success_status">All ringtones successfully created &amp; applied</string>
    <string name="result_mixed_title">Partial Success</string>
    <string name="result_mixed_status">Failed to create some ringtones</string>
    <string name="result_failed_title">Failed</string>
    <string name="result_failed_status">Failed to create all ringtones</string>
    <string name="result_unknown_title">Unknown</string>
    <string name="result_unknown_status">Status unknown</string>

    <string name="ringtone_creator_no_content">Choose an item below to start building your ringtone</string>

    <string name="search_hint">Search</string>

    <string name="permission_missing_title">We need your permission to:</string>
    <string name="permission_missing_read_contacts">\u2802 Get the names and nicknames of your contacts</string>
    <string name="permission_missing_write_contacts">\u2802 Set a ringtone for each of your contacts</string>

    <string name="label_first_name">Given Name</string>
    <string name="label_middle_name">Middle Name</string>
    <string name="label_last_name">Family Name</string>
    <string name="label_name_prefix">Name Prefix</string>
    <string name="label_name_suffix">Name Suffix</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_custom_text">Custom Text</string>
    <string name="label_custom_audio">Audio File</string>
    <string name="label_system_ringtone">System Ringtone</string>

    <string name="item_audio_no_file">No audio selected</string>
    <string name="item_ringtone_no_file">No ringtone selected</string>

    <string name="ready_title">Ready to start?</string>
    <string name="confirmation_generator_info">This might take a while. You can keep using your phone while we work in the background.</string>
    <string name="confirmation_contact_picker_return">Return to Contact Picker</string>
    <string name="confirmation_ringtone_builder_return">Return to Ringtone Builder</string>

    <string name="choice_category_contact_data">Contact Info</string>
    <string name="choice_category_custom_text">Text</string>
    <string name="choice_category_custom_audio">Audio</string>
</resources>
