<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.boswelja.contactringtonegenerator.ui.results.ResultsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/result_indicator"
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:srcRes="@{viewModel.resultIconRes}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/result_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintVertical_bias="0.35"
            tools:src="@drawable/ic_unknown_indicator" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_title"
            app:textRes="@{viewModel.resultTitleRes}"
            app:layout_constraintTop_toBottomOf="@id/result_indicator"
            app:layout_constraintBottom_toTopOf="@id/result_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/result_unknown_title"
            style="@style/WizardTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_status"
            app:textRes="@{viewModel.resultStatusRes}"
            app:layout_constraintTop_toBottomOf="@id/result_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/result_unknown_status"
            style="@style/WizardStatus" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/finish_button"
            android:text="@string/finish"
            app:icon="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/WizardFabContinue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
